Cluster - add: HostParam & HostMemory
